--- a/style.css
+++ b/style.css
@@ -496,13 +496,22 @@ img {
 
 
 #connected-graph {
-  
   width: 100%;
-  height: 50vh;
+  height: 50vh; /* Половина высоты экрана */
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 2rem; /* Отступ сверху для отделения от текста */
+  z-index: 1; /* Убедиться, что он не перекрывает текст */
 }
+
+
+
+.text-zone {
+  position: relative;
+  z-index: 2; /* Установить больший z-index для текста, чтобы он был выше */
+}
+
 
 
 
