--- a/style.css
+++ b/style.css
@@ -558,5 +558,86 @@ img {
   color: #fff;
 }
 
+.timeline {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      position: relative;
+      margin: 2rem auto;
+      width: 80%;
+    }
+
+    .timeline::before {
+      content: '';
+      position: absolute;
+      width: 4px;
+      background-color: #7bff00; /* Original green color */
+      top: 0;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    .timeline-event {
+      display: flex;
+      align-items: center;
+      margin: 2rem 0;
+      width: 100%;
+    }
+
+    .timeline-event:nth-child(odd) {
+      justify-content: flex-start;
+    }
+
+    .timeline-event:nth-child(even) {
+      justify-content: flex-end;
+    }
+
+    .timeline-content {
+      background-color: #4a4a4a; /* Original gray color */
+      padding: 1rem 1.5rem;
+      border-radius: 10px;
+      width: 45%;
+      position: relative;
+    }
+
+    .timeline-content::after {
+      content: '';
+      position: absolute;
+      width: 0;
+      height: 0;
+      border-style: solid;
+    }
+
+    .timeline-event:nth-child(odd) .timeline-content {
+      margin-left: 2rem;
+    }
+
+    .timeline-event:nth-child(odd) .timeline-content::after {
+      top: 50%;
+      left: -15px;
+      border-width: 10px 15px 10px 0;
+      border-color: transparent #4a4a4a transparent transparent; /* Original gray color */
+      transform: translateY(-50%);
+    }
+
+    .timeline-event:nth-child(even) .timeline-content {
+      margin-right: 2rem;
+    }
+
+    .timeline-event:nth-child(even) .timeline-content::after {
+      top: 50%;
+      right: -15px;
+      border-width: 10px 0 10px 15px;
+      border-color: transparent transparent transparent #4a4a4a; /* Original gray color */
+      transform: translateY(-50%);
+    }
+
+    .timeline-date {
+      font-weight: bold;
+      color: #7bff00; /* Original green color */
+      margin-bottom: 0.5rem;
+    }
+
 
 
