--- a/style.css
+++ b/style.css
@@ -17,9 +17,29 @@ img {
   max-width: 100%;
 }
 .content {
-  max-width: 80rem;
-  margin: 0 auto;
+  max-height: 500px;
+  max-width: 1280px;
 }
+@media (max-width: 1280px) {
+  .content {
+    max-width: 95%; /* Уменьшаем ширину до 95% от доступной ширины */
+  }
+}
+
+/* Для планшетов */
+@media (max-width: 768px) {
+  .content {
+    max-width: 95%; /* Уменьшаем ширину до 95% от доступной ширины */
+  }
+}
+
+/* Для мобильных устройств */
+@media (max-width: 480px) {
+  .content {
+    max-width: 95%; /* Уменьшаем ширину до 95% от доступной ширины */
+  }
+}
+
 .container {
   max-width: 63.125rem;
   margin: 0 auto;
@@ -239,12 +259,15 @@ img {
   font-weight: 300;
   line-height: 1.3;
 }
-.upper-landing__copy {
+.upper-landing__subtitle {
+  font-size: 14px;
   margin-bottom: 2.8125rem;
   padding-left: 2rem;
   line-height: 1.9;
-  font-size: 0.9rem;
   border-left: 1px solid #6f6f6f;
+}
+.event-date {
+  font-size: 14px;
 }
 .upper-landing__cta,
 .upper-landing__slideshow {
@@ -488,11 +511,36 @@ img {
   background-color: #ff007b; /* Розовый для LLM.day */
 }
 
+.landing-slideshow__slide .content {
+  display: flex;
+  flex-direction: column; /* Элементы располагаются вертикально */
+  justify-content: space-between; /* Равномерно распределяет пространство между элементами */
+  height: 100%; /* Задает контейнеру полную высоту */
+}
 
 
 .text-zone {
+  margin-bottom: 20px;
+  flex: 1;
   position: relative;
   z-index: 2; /* Текст выше графа */
+}
+
+.text-zone p {
+  font-size: 18px; /* Adjust the font size as needed */
+}
+
+/* Responsive font sizes for non-desktop devices */
+@media (max-width: 768px) {
+  .text-zone p {
+    font-size: 16px; /* Smaller font size on tablets */
+  }
+}
+
+@media (max-width: 480px) {
+  .text-zone p {
+    font-size: 14px; /* Even smaller font size on mobile phones */
+  }
 }
 
 #connected-graph {
@@ -504,6 +552,12 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.graph-container {
+  width: 100%; /* Занимает всю доступную ширину */
+  height: auto; /* Высота подстраивается под содержимое */
+  margin-top: 20px; /* Отступ для разделения контента */
 }
 
 
