--- a/style.css
+++ b/style.css
@@ -6,70 +6,29 @@
   margin: 0;
   padding: 0;
 }
+
 body {
   background-color: #3b3b3b;
   font-family: 'Raleway', sans-serif;
   color: #363636;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0 auto;
+
 }
+
 img {
   max-width: 100%;
 }
-.content {
+
+.contentland {
+  width: 100%;
   max-height: 500px;
-  max-width: 1280px;
-}
-@media (max-width: 1280px) {
-  .content {
-    max-width: 95%; /* Уменьшаем ширину до 95% от доступной ширины */
-  }
+  margin-right: 10px;
 }
 
-/* Для планшетов */
-@media (max-width: 768px) {
-  .content {
-    max-width: 95%; /* Уменьшаем ширину до 95% от доступной ширины */
-  }
-}
 
-/* Для мобильных устройств */
-@media (max-width: 480px) {
-  .content {
-    max-width: 95%; /* Уменьшаем ширину до 95% от доступной ширины */
-  }
-}
 
-.content {
-  margin-left: 30px;
-  max-height: 500px;
-  max-width: 80rem;
-  /*margin: 0 auto;*/
-}
-
-/* Для устройств с шириной меньше 1280px */
-@media (max-width: 1280px) {
-  .content {
-    max-width: 95%; /* Уменьшаем ширину до 95% от доступной ширины */
-    margin-left: 20px;
-  }
-}
-
-/* Для планшетов */
-@media (max-width: 768px) {
-  .content {
-    max-width: 95%; /* Уменьшаем ширину до 95% от доступной ширины */
-    margin-left: 10px;
-  }
-}
-
-/* Для мобильных устройств */
-@media (max-width: 480px) {
-  .content {
-    margin-left: 5px;
-    max-width: 95%; /* Уменьшаем ширину до 95% от доступной ширины */
-  }
-}
 
 .srt {
   position: absolute;
@@ -82,7 +41,7 @@ img {
 }
 .button {
   display: inline-block;
-  padding: 0.75em 1.25em 0.75em 0; /* Стандартные отступы */
+  padding: 0.75em 1.25em 0.75em 0.3em; /* Стандартные отступы */
   position: relative;
   overflow: hidden;
   text-decoration: none;
@@ -95,18 +54,18 @@ img {
 /* Медиа-запрос для мобильных устройств */
 @media (max-width: 768px) {
   .button {
-    padding: 0.5em 0.75em 0.5em 0; /* Уменьшенные отступы для мобильных устройств */
+    padding: 0.5em 0.75em 0.5em 0.3em; /* Уменьшенные отступы для мобильных устройств */
   }
 }
 
 @media (max-width: 480px) {
   .button {
-    padding: 0.25em 0.5em 0.25em 0; /* Еще более уменьшенные отступы для очень маленьких экранов */
+    padding: 0.25em 0.5em 0.25em 0.3em; /* Еще более уменьшенные отступы для очень маленьких экранов */
   }
 }
 
 .button:hover:before {
-  border-bottom-color: #fc595a;
+  border-bottom-color: #00a2ff;
 }
 .button:hover:after {
   bottom: 95%;
@@ -131,7 +90,7 @@ img {
   position: absolute;
   bottom: 0;
   left: 0;
-  background-color: #fc595a;
+  background-color: #00a2ff;
   transition: bottom 0.2s ease-in-out;
   z-index: -1;
 }
@@ -139,8 +98,8 @@ img {
   display: inline-block;
   position: relative;
   padding: 0.75em 1.25em;
-  background-color: #fc595a;
-  color: #fff;
+  background-color: #7bff00;
+  color: #000;
   font-size: 0.875rem;
   text-decoration: none;
   font-weight: 700;
@@ -194,8 +153,9 @@ img {
 }
 
 .site-nav{
-  padding-top: 10px;
+  padding-top: 30px;
   padding-bottom: 20px;
+  padding-right: 5px;
 }
 /* Стандартные стили для элементов навигации, исключая последний элемент */
 .site-nav__item:not(:last-child) {
@@ -274,7 +234,6 @@ img {
 }
 .upper-landing {
   display: flex;
-  
   color: #ececec;
   
 }
@@ -314,12 +273,12 @@ img {
 }
 .upper-landing__info {
   margin-bottom: 0.5rem; 
-  width: 35%;
+  width: 50%;
 }
 
 .upper-landing__header h2 {
   margin: 0 0 3.625rem 0;
-  font-size: 3rem;
+  font-size: 3.8rem;
   font-weight: 300;
   line-height: 1.3;
 }
@@ -363,8 +322,8 @@ img {
   font-size: 14px;
 }
 
-.upper-landing__cta,
-.upper-landing__slideshow {
+.upper-landing__cta {
+ 
   width: 55%;
   padding-left: 10px;
 }
@@ -374,10 +333,17 @@ img {
     padding-left: 0;
   }
 }
+.upper-landing__slideshow {
+  width: 100%; /* Гарантируем, что слайдшоу занимает всю ширину */
+  padding: 0; /* Убираем внутренние отступы */
+  margin: 0; /* Убираем внешние отступы */
+  box-sizing: border-box; /* Границы и паддинги входят в ширину/высоту элемента */
+}
+
 .upper-landing__slideshow-controls {
   display: flex;
   justify-content: flex-end;
-  align-items: center;
+  align-items: right;
   padding-right: 4rem;
 }
 .upper-landing__slideshow-controls .slick-dots {
@@ -538,6 +504,12 @@ img {
   max-width: 31.25rem;
 }
 
+.landing-slideshow__slide{
+  width: 100%;
+  box-sizing: border-box;
+  margin-left: 5px;
+}
+
 .landing-slideshow__slide h2 {
   font-size: 24px; /* Adjust size as needed */
   color: #fff; /* Choose a color that fits your design */
@@ -587,10 +559,7 @@ img {
   height: 3px; /* Высота точки */
   display: block; /* Обеспечиваем правильное отображение */
 }
-/* Голубой цвет только для первой точки при загрузке */
-.upper-landing__slideshow .slick-dots li:first-child button {
-  background-color: #00a2ff; /* Голубой */
-}
+
 /* Изменение цвета точек при активации слайда */
 .upper-landing__slideshow.compling .slick-dots li.slick-active button,
 .upper-landing__slideshow.compling .slick-dots button:hover {
@@ -616,7 +585,7 @@ img {
   display: flex;
   flex-direction: column; /* Элементы располагаются вертикально */
   justify-content: space-between; /* Равномерно распределяет пространство между элементами */
-  height: 100%; /* Задает контейнеру полную высоту */
+  height: 100%; 
 }
 
 
@@ -645,31 +614,12 @@ img {
 }
 
 #connected-graph {
-  width: 100%;
-  height: 60vh; /* Задаём высоту графа в 50% от высоты экрана */
-  margin-top: 3rem; /* Отступ сверху */
-  position: relative; /* Или absolute, в зависимости от вашего макета */
-  z-index: 10; /* Значение выше, чем у других перекрывающихся элементов */
-
+  max-width: 600px;
+  margin-top: 5px; /* Отступ сверху */
   display: flex;
-  align-items: center;
-  justify-content: center;
+  justify-content: right;
 }
 
-.graph-container {
-  width: 100%; /* Занимает всю доступную ширину */
-  height: auto; /* Высота подстраивается под содержимое */
-  margin-top: 20px; /* Отступ для разделения контента */
-}
-
-/* Скрываем граф на мобильных устройствах */
-@media (max-width: 768px) {
-  #connected-graph {
-    /*display: none;*/
-  }
-
-
-}
 
 
 .lower-landing__form {
@@ -677,6 +627,7 @@ img {
   flex-direction: column;
   gap: 1rem; /* Расстояние между элементами формы */
   margin-top: 1.5rem;
+  padding-right: 20px;
 }
 
 .form-group {
@@ -733,21 +684,54 @@ img {
 .timeline-subtitle {
   text-align: center;
   font-size: 1.2rem;
-  color: #d1d1d1; /* Серый оттенок */
   margin-bottom: 2rem;
   line-height: 1.5;
 }
 
-/* Вертикальная линия таймлайна */
-.timeline-line {
-  position: absolute;
-  left: 50%;
-  top: calc(4rem + 20px); /* Начало линии ниже подзаголовка */
-  width: 4px;
-  height: calc(100% - 4rem); /* Протяженность линии */
-  background-color: #7bff00; /* Зеленая линия */
-  transform: translateX(-50%);
+/* Стилизация списка в блоке timeline-details */
+.timeline-details ul {
+  list-style: none; /* Убираем маркеры списка */
+  padding-top: 10px;
+  margin: 0 0 20px 20px; /* Небольшой отступ снизу и слева */
 }
+
+.timeline-details li {
+  padding-left: 10px; /* Отступ для текста элементов списка */
+  margin-bottom: 10px; /* Отступ между элементами списка */
+  position: relative; /* Для позиционирования псевдо-элементов */
+  font-size: 0.875rem; /* Размер шрифта элементов списка */
+  line-height: 1.6; /* Высота строки */
+}
+
+.timeline-details li:before {
+  content: ''; /* Псевдо-элемент для кастомного маркера */
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 6px;
+  height: 6px;
+  background-color: #7bff00; /* Цвет фона маркера */
+  border-radius: 50%; /* Делаем маркер круглым */
+  transform: translateY(-50%); /* Центрируем маркер по вертикали */
+}
+
+/* Адаптивные стили для меньших устройств */
+@media (max-width: 768px) {
+  .timeline-details li {
+    font-size: 0.75rem; /* Уменьшаем размер шрифта на планшетах */
+  }
+}
+
+@media (max-width: 480px) {
+  .timeline-details ul {
+    margin-left: 15px; /* Уменьшаем левый отступ на мобильных устройствах */
+  }
+
+  .timeline-details li {
+    font-size: 0.65rem; /* Дальнейшее уменьшение размера шрифта на мобильных */
+  }
+}
+
 
 /* События таймлайна */
 .timeline-event {
@@ -800,3 +784,57 @@ img {
 .timeline-event:nth-child(even) .timeline-point {
   left: 52.5%;
 }
+
+.intro-section {
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  max-width: 600px;
+}
+
+/* Медиа-запросы для планшетов */
+@media (max-width: 768px) {
+  .intro-section {
+    margin-left: 15px; /* Уменьшаем левый отступ */
+    max-width: 500px; /* Уменьшаем максимальную ширину для лучшего вписывания */
+  }
+}
+
+/* Медиа-запросы для мобильных устройств */
+@media (max-width: 480px) {
+  .intro-section {
+    margin-left: 10px; /* Ещё меньше левый отступ */
+    max-width: 200px; /* Позволяет блоку растягиваться на всю доступную ширину */
+  }
+}
+
+/* Основные стили для стрелок */
+.slideshow-arrows__prev,
+.slideshow-arrows__next {
+  display: inline-block;
+  height: auto; /* Поддерживаем пропорции изображения */
+}
+
+/* Устанавливаем размеры изображения внутри кнопок стрелок */
+.slideshow-arrows__prev img,
+.slideshow-arrows__next img {
+  width: 100%; /* Заполняем полностью родительский элемент */
+  height: auto; /* Поддерживаем пропорции */
+}
+
+/* Медиа-запросы для мобильных устройств */
+@media (max-width: 768px) {
+  .slideshow-arrows__prev,
+  .slideshow-arrows__next {
+    width: 60%w; /* Увеличиваем ширину на меньших экранах, если нужно более заметное отображение */
+  }
+}
+
+@media (max-width: 480px) {
+  .slideshow-arrows__prev,
+  .slideshow-arrows__next {
+    width: 40%; /* Увеличиваем ширину для очень маленьких экранов */
+  }
+}
+
+
