--- a/style.css
+++ b/style.css
@@ -674,13 +674,17 @@ img {
 }
 
 .connected-graph {
-  max-width: 600px;
+  max-width: 850px;
   margin-top: 5px; /* Отступ сверху */
   display: flex;
   justify-content: right;
-
+  width: 100%;
 }
-
+.connected-graph svg {
+  width: 100%; 
+  height: auto;
+ 
+}
 
 
 
